devsecops-nodejs-api/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-nodejs-api-svc
  namespace: devsecops-app
  labels:
    app: devsecops-nodejs-api
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 32000
      protocol: TCP
  selector:
    app: devsecops-nodejs-api
